Fixed problems with overflow and word-wrapping. Added lines between messages

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -18,6 +18,7 @@ $footer-height: 5rem;
   padding: 0;
   font-size: $font-size;
   font-family: 'VT323', monospace;
+  box-sizing: border-box;
 }
 
 body{
